--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,29 @@
+/*Start universal style*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+/*End univeral style*/
 
+/*Start global style*/
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+/*End global style*/
+
+/*Start body style*/
 body {
     background-color: #d9dcd6;
 }
+/*End body style*/
 
+/*Begin Header style*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -23,6 +39,7 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
+
 
 .header nav {
     padding-top: 15px;
@@ -40,16 +57,10 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
+/*End Header style */
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
 
-p {
-    font-size: 16px;
-}
-
+/*Hero section style*/
 .hero {
     height: 800px;
     width: 100%;
@@ -74,7 +85,9 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+/* Hero section end*/
 
+/*Benefits section style*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,36 +99,15 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -133,8 +125,10 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/*End benefits section style*/
 
-.search-engine-optimization {
+/*Content section style*/
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,51 +137,16 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+/*End content section style*/
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/*Footer style*/
 .footer {
     padding: 30px;
     clear: both;
@@ -198,3 +157,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/*End footer style*/
